@@ -1,6 +1,12 @@
 config BR2_PACKAGE_HAL
 	bool "hal"
+	select BR2_PACKAGE_EXPAT
+	select BR2_PACKAGE_LIBGLIB2
+	select BR2_PACKAGE_GETTEXT
+	select BR2_PACKAGE_LIBINTL
+	select BR2_PACKAGE_LIBICONV if !BR2_ENABLE_LOCALE
 	select BR2_PACKAGE_DBUS
+	select BR2_PACKAGE_DBUS_EXPAT
 	select BR2_PACKAGE_DBUS_GLIB
 	select BR2_PACKAGE_HWDATA
 	select BR2_PACKAGE_UDEV
